chore: Fixed more Sonar findings.